<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchMainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="查询项目："
            android:textSize="@dimen/activity_vertical_margin" />

        <Spinner
            android:id="@+id/ItemSpinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@array/searchSelect"
            android:prompt="@string/search_prompt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="站点名称："
            android:textSize="@dimen/activity_vertical_margin" />

        <Spinner
            android:id="@+id/ShuikuSpinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@array/locations"
            android:prompt="@string/search_location_prompt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="查询时间："
            android:textSize="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="起点："
                android:textSize="@dimen/activity_horizontal_margin" />

            <EditText
                android:id="@+id/StartEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="date"
                android:text="2014-2-2" >
				
                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="时："
                android:textSize="@dimen/activity_horizontal_margin" />

            <Spinner
                android:id="@+id/StartTimeSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:entries="@array/hours"
                android:prompt="@string/search_start_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="终点："
                android:textSize="@dimen/activity_horizontal_margin" />

            <EditText
                android:id="@+id/EndEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="date"
                android:text="2014-3-2"  >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="时："
                android:textSize="@dimen/activity_horizontal_margin" />

            <Spinner
                android:id="@+id/EndTimeSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:entries="@array/hours"
                android:prompt="@string/search_end_prompt" />
        </LinearLayout>
        
        <Button
            android:id="@+id/SearchButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="查询" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_weight="4" >

        <TextView
            android:id="@+id/search_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="" />

    </FrameLayout>

</LinearLayout>