<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QunceActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="0.3"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="0dp"
            android:gravity="center_vertical"
            android:layout_weight="0.5"
            android:text="请指定：你所在的镇乡办区:"
            android:textSize="@dimen/activity_horizontal_margin" />

        <Spinner
            android:id="@+id/qunce_street"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:entries="@array/street"
            android:prompt="@string/search_street_prompt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="你所在的村："
                android:textSize="@dimen/activity_horizontal_margin" />

            <EditText
                android:id="@+id/qunceCunText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="0.25"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:text="起点："
                android:textSize="@dimen/activity_horizontal_margin" />

            <EditText
                android:id="@+id/QunceStartText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="date"
                android:text="2014-2-2" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="时："
                android:textSize="@dimen/activity_horizontal_margin" />

            <Spinner
                android:id="@+id/StartHourSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:entries="@array/hours"
                android:prompt="@string/search_start_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:text="终点："
                android:textSize="@dimen/activity_horizontal_margin" />

            <EditText
                android:id="@+id/QunceEndText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:inputType="date"
                android:text="2014-3-2" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="时："
                android:gravity="center_vertical"
                android:textSize="@dimen/activity_horizontal_margin" />

            <Spinner
                android:id="@+id/EndHourSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:entries="@array/hours"
                android:prompt="@string/search_end_prompt" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.125"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:text="实测降雨量："
            android:textSize="@dimen/activity_horizontal_margin" />

        <EditText
            android:id="@+id/jiangyuliangText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:text="0" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="毫米"
            android:gravity="center_vertical"
            android:textSize="@dimen/activity_horizontal_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#ffffff"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.125"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/SentButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="确定报讯" />
    </LinearLayout>

</LinearLayout>